# wealthTrack

./: .agent-handoff.md  .env.dev.example  .env.local-prod  .env.prod.example  .env.test.example  .eslint-report.json  .gitignore  .ruff-report.json  BASELINE_REVIEW.md  CHANGELOG.md  CI_CD_SETUP.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_ACHIEVEMENT.md  COVERAGE_STRATEGY.md  DOCUMENTATION.md  E2E_IMPLEMENTATION_SUMMARY.md  FRONTEND_REFACTORING_ANALYSIS.md  FRONTEND_REFACTORING_EXAMPLES.md  GSD_STATUS.md  INDEX.md  Makefile  PATH_ALIASES_COMPLETION.md  README.md  SESSION_SUMMARY.md  TYPE_FIXES_SUMMARY.md  coverage.json  docker-compose.dev.yml  docker-compose.yml  pyrightconfig.json  setup-hooks.sh
backend/: .env.example  .pylintrc  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  seed.py
backend/alembic/: env.py
backend/app/: config.py  constants.py  database.py  main.py  middleware.py
backend/docs/: REFACTORING_PATTERNS.md
backend/scripts/: cleanup_reference_data.py
backend/tests/: conftest.py  test_account_attribute_repository.py  test_account_attributes_handler.py  test_account_controller.py  test_account_dates_controller.py  test_account_delete_cascade.py  test_account_document_repository.py  test_account_error_handling.py  test_account_event_repository.py  test_account_event_service.py  test_account_events_controller.py  test_account_group_repository.py  test_account_repository.py  test_account_service.py  test_account_transfer_controller.py  test_account_transfer_service.py  test_analytics_repository.py  (+77 more)
(+789 files in other folders)
